--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "html-react-parser": "^1.2.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-responsive": "^9.0.0-beta.3",
